<resources>
    <string name="app_name">Inventory</string>

    <!-- Formatted String for displaying quantity [CHAR LIMIT=0]-->
    <string name="number_message" translatable="false">%1$d</string>

    <!-- Formatted String for displaying price with $ added [CHAR LIMIT=20] -->
    <string name="price_message" translatable="false">%1$d $</string>

    <!-- Detail Activity Title [CHAR LIMIT=20] -->
    <string name="add_item">Add an Item</string>

    <!-- Delete message in ActivityDialog [CHAR LIMIT=40] -->
    <string name="delete_question">Delete this item?</string>

    <!-- Delete option on ActivityDialog [CHAR LIMIT=20] -->
    <string name="delete_option">Delete</string>

    <!-- Cancel option on ActivityDialog [CHAR LIMIT=20] -->
    <string name="cancel_option">Cancel</string>

    <!-- Item deleted confirmation in Toast [CHAR LIMIT=40] -->
    <string name="item_deleted">Item Deleted</string>

    <!-- Error saving item confirmation in Toast [CHAR LIMIT=40] -->
    <string name="error_saving_item">Error saving item</string>

    <!-- Item Saved Confirmation in Toast [CHAR LIMIT=40] -->
    <string name="item_saved">Item Saved</string>

    <!-- Update not completed confirmation in Toast [CHAR LIMIT=40] -->
    <string name="update_not_completed">Update Not completed</string>

    <!-- Update Completed confirmation in Toast [CHAR LIMIT=40] -->
    <string name="update_completed">Update Completed</string>

    <!-- Quantity warning if user trys to go below 0 in a Toast [CHAR LIMIT=40] -->
    <string name="quantity_below_zero">Quantity cannot be below 0</string>

    <!-- Delete All Items option in MainActivity menu [CHAR LIMIT=40] -->
    <string name="delete_all_items">Delete All Items?</string>

    <!-- All items deleted confirmation in a Toast [CHAR LIMIT=40] -->
    <string name="all_items_deleted">All Items Deleted</string>

    <!-- Label for when a change was made and not saved when leaving DetailActivity [CHAR LIMIT=40] -->
    <string name="discard_and_quit">Discard your changes and quit?</string>

    <!-- Discard option on ActivityDialog [CHAR LIMIT=20] -->
    <string name="discard_option">DISCARD</string>

    <!-- Keep editing option on ActivityDialog[CHAR LIMIT=20] -->
    <string name="keep_editing_option">KEEP EDITING</string>

    <!-- Quantity TextView label [CHAR LIMIT=20] -->
    <string name="quantity">Quantity:</string>

    <!-- Item Price EditView hint [CHAR LIMIT=20] -->
    <string name="item_price">Item Price</string>

    <!-- Item Price TextView Label [CHAR LIMIT=20] -->
    <string name="price">Price:</string>

    <!-- Item Supplier EditText hint [CHAR LIMIT=20] -->
    <string name="item_supplier">Item Supplier\'s Email</string>

    <!-- Supplier TextView label [CHAR LIMIT=20] -->
    <string name="supplier">Supplier:</string>

    <!-- Item Description EditText hint [CHAR LIMIT=20] -->
    <string name="item_description">Item Description</string>

    <!-- Item Description TextView label [CHAR LIMIT=20] -->
    <string name="description">Description:</string>

    <!-- Item name EditText hint [CHAR LIMIT=20] -->
    <string name="item_name">Item Name</string>

    <!-- Item name TextView label [CHAR LIMIT=20] -->
    <string name="item_name_textView">Item Name:</string>

    <!-- Delete Button label [CHAR LIMIT=20] -->
    <string name="btn_delete_item">Delete Item</string>

    <!-- Save Button label [CHAR LIMIT=20] -->
    <string name="btn_save_item">Save Item</string>

    <!-- Shipment Button label [CHAR LIMIT=20] -->
    <string name="btn_shipment">Shipment</string>

    <!-- Quantity EditText hint [CHAR LIMIT=20] -->
    <string name="quantity_hint">Quantity</string>

    <!-- Sale Button label [CHAR LIMIT=20] -->
    <string name="btn_sale">Sale</string>

    <!-- Default Quantity amount [CHAR LIMIT=0] -->
    <string name="default_quantity" translatable="false">0</string>

    <!-- list_item quantity label text view[CHAR LIMIT=20] -->
    <string name="list_item_quantity_text_view">Quantity:</string>

    <!-- list_item image content description label [CHAR LIMIT=20] -->
    <string name="list_item_content_description">Sale symbol</string>

    <!-- list_item price label text view [CHAR LIMIT=20] -->
    <string name="list_item_price_text_view">Price:</string>

    <!-- list_item name label text view [CHAR LIMIT=20] -->
    <string name="list_item_name_text_view">Name:</string>

    <!-- list_item sale button[CHAR LIMIT=20] -->
    <string name="list_item_sale_button">Sale</string>

    <!-- Empty set string [CHAR LIMIT=20] -->
    <string name="empty_set_text">It\'s Empty in here, add an Item</string>

    <!-- order from supplier label [CHAR LIMIT=20] -->
    <string name="order_from_supplier">Order from Supplier</string>

    <!-- content description for empty set image [CHAR LIMIT=20] -->
    <string name="default_empty_image">Default Empty Image</string>

    <!-- insert new image label for menu [CHAR LIMIT=20] -->
    <string name="insert_new_item">Insert New Item</string>

    <!-- insert dummy data for menu[CHAR LIMIT=20] -->
    <string name="insert_dummy_data">Insert Dummy Data</string>

    <!-- content description for empty set [CHAR LIMIT=20] -->
    <string name="empty_set_image">Empty Set Image</string>

    <!-- add picture label for button[CHAR LIMIT=20] -->
    <string name="add_picture">Add Picture</string>
    <string name="valid_email_string">ex: Example@inventory.com</string>
    <string name="enter_suppier_email">To order, enter a supplier email.</string>
    <string name="send_mail">Send Mail...</string>
    <string name="email_subject">New shipment needed.</string>
    <string name="email_text_body">Please send a new shipment ASAP</string>
    <string name="access_denied">Access Denied</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_description">Invalid Description</string>
    <string name="invalid_price">Invalid Price</string>
    <string name="invalid_quantity">Invalid Quantity</string>

</resources>
